<resources>
    <string name="app_name">MDP Group 15</string>
    <string name="tab_text_1">Bluetooth</string>
    <string name="tab_text_2">Chat</string>
    <string name="tab_text_3">Map Config</string>
    <string name="tab_text_4">Challenge</string>

    <!--  Comms  -->
    <string name="send">SEND</string>
    <string name="configure">Reconfigure</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="bluetooth_connection">Not Connected</string>

    <!-- Dialog -->
    <string name="reconfiguration">Reconfiguration</string>
    <string name="f1Title">F1:</string>
    <string name="f2Title">F2:</string>
    <string name="f1Placeholder">Enter F1 value</string>
    <string name="f2Placeholder">Enter F2 value</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>

    <!-- Map -->
    <string name="manual">MANUAL</string>
    <string name="auto">AUTO</string>
    <string name="status_not_available">Not Available</string>
    <string name="image_rec_end">Image Rec Completed</string>
    <string name="fastest_car_end">Fastest Car Completed</string>
    <string name="bt_disconnect">Disconnected</string>
    <string name="bt_connected">Connected</string>
    <string name="img_rec_stop">Image Recognition Completed</string>
    <string name="img_rec_start">Image Recognition Started</string>
    <string name="fastest_car_stop">Fastest Car Completed</string>
    <string name="fastest_car_start">Fastest Car Started</string>
    <string name="timer_default_val">00:00</string>
    <string name="robot_status_na">Not Available</string>
    <string name="chat_description">A chat interface that sends messages to the robot car</string>
    <string name="leftBtn">Left Button</string>
    <string name="upBtn">Up Button</string>
    <string name="rightBtn">Right Button</string>
    <string name="downBtn">Down Button</string>
    <string name="bluetoothButton">Bluetooth Button</string>
    <string name="leftUpBtn">Forward and turn left</string>
    <string name="rightUpBtn">Forward and right button</string>
    <string name="leftDownBtn">Reverse and turn left</string>
    <string name="rightDownBtn">Reverse and turn right</string>

</resources>
