<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_light_gray"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000ffff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bluetoothButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@color/transparent"
                android:contentDescription="@string/bluetoothButton"
                android:foregroundGravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/bluetooth_icon" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:orientation="horizontal">

                <view
                    android:id="@+id/mapView"
                    class="com.example.mdp_group31.main.GridMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bluetoothConnection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/statusbar"
                    android:gravity="center"
                    android:text="BLUETOOTH"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/header_spacing"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/background_white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bluetoothStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/bluetooth_connection"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_dark" />

                    <TextView
                        android:id="@+id/bluetoothConnectedDevice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="Connected Device"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/header_spacing"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/statusbar"
                    android:gravity="center"
                    android:text="ROBOT STATUS"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/robotStatus"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/background_white"
                    android:gravity="center"
                    android:text="Ready to Start"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/directionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/header_spacing"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/statusbar"
                    android:gravity="center"
                    android:text="DIRECTION"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/directionAxisTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/background_white"
                    android:gravity="center"
                    android:text="None"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/CoordsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/header_spacing"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/statusbar"
                    android:gravity="center"
                    android:text="COORDINATES"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"
                    android:background="@drawable/background_white"
                    android:gravity="center"
                    android:orientation="horizontal">


                        <TextView
                            android:id="@+id/robotX"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="X:"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/xAxisTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="0"
                            android:textColor="@color/colorBlack"
                            />

                        <TextView
                            android:id="@+id/robotY"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:text="Y:"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/yAxisTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="0"
                            android:textColor="@color/colorBlack"
                            />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:orientation="horizontal">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/chat_description"
                        app:tabGravity="center"
                        app:tabIndicator="@drawable/tab_selected"
                        app:tabIndicatorAnimationMode="elastic"
                        app:tabIndicatorColor="@null"
                        app:tabIndicatorGravity="stretch"
                        app:tabMinWidth="110dp"
                        app:tabMode="scrollable"
                        app:tabRippleColor="@null" />

                </LinearLayout>
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/leftUpBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/leftUpBtn"
                            android:foreground="@drawable/arrow_left_up_faced_state" />

                        <ImageButton
                            android:id="@+id/upBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/upBtn"
                            android:foreground="@drawable/arrow_up_faced_state" />

                        <ImageButton
                            android:id="@+id/rightUpBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/rightUpBtn"
                            android:foreground="@drawable/arrow_right_up_faced_state" />
                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/leftDownBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/leftDownBtn"
                            android:foreground="@drawable/arrow_left_down_faced_state" />
                        <ImageButton
                            android:id="@+id/downBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/downBtn"
                            android:foreground="@drawable/arrow_down_faced_state" />

                        <ImageButton
                            android:id="@+id/rightDownBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/rightDownBtn"
                            android:foreground="@drawable/arrow_right_down_faced_state" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="15dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="40dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>